docs: add swagger doc details for new types
