# apps/api/cowork/coworkController.ts
@@ -1,6 +1,5 @@
 import { Tags, Route, Get, Path, Put, Post, Delete, Body, BodyProp } from 'tsoa'
 import CoworkService from './coworkService'
-import { Cowork, Address } from '@prisma/client'
 import { EditCoworkInput } from './coworkTypes'
 
 @Route('cowork')
@@ -16,11 +15,22 @@ export default class CoworkController {
     return CoworkService.fetchById(id)
   }
 
+  /**
+   *
+   * @param id
+   * @param data EditCoworkInput
+   * @returns Cowork
+   */
   @Put('/{id}')
-  static async edit(@Path() id: string, @Body() body: EditCoworkInput) {
-    return CoworkService.edit(id, body)
+  static async edit(@Path() id: string, @Body() data: EditCoworkInput) {
+    return CoworkService.edit(id, data)
   }
 
+  /**
+   *
+   * @param data EditCoworkInput
+   * @returns Cowork
+   */
   @Post('/')
   static async create(@BodyProp() data: EditCoworkInput) {
     return CoworkService.createCowork(data)
